commit-070422-0015 -> закончен блок отзывов

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^3.2.13",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
