--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "swiper": "^8.1.1",
     "vue": "^3.2.13",
-    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
